# lambda-wave

./: .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  Haskell Radar SGRT System Development.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  check_type_1.hs  check_type_2.hs  docker-compose.yml  sgrt-radar-system.cabal
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  lint.yml  release.yml
.jules/: atlas.md  forge.md
app/: Main.hs
bench/: LatencyBench.hs
cbits/include/: RingBuffer.h
cbits/src/: RingBufferCheck.cpp  ring_buffer.cpp
config/ti_iwr6843isk/: sgrt_profile.cfg
docs/: DEVELOPER_GUIDE.md  architecture.md
lambda-wave/: README.md  package.yaml  stack.yaml
lambda-wave/app/: Main.hs
lambda-wave/bench/: LatencyBench.hs
lambda-wave/cbits/: ring_buffer.c  ring_buffer.h
lambda-wave/src/LambdaWave/: Config.hs  Types.hs
lambda-wave/src/LambdaWave/Analysis/: Regression.hs
lambda-wave/src/LambdaWave/Core/: Gating.hs  Mesher.hs
lambda-wave/src/LambdaWave/Hardware/: Control.hs  Ingestion.hs  Parser.hs
lambda-wave/src/LambdaWave/Safety/: Audit.hs  Watchdog.hs
lambda-wave/src/LambdaWave/UI/: Input.hs  Renderer.hs  Window.hs
lambda-wave/test/: RegressionSpec.hs  Spec.hs
scripts/: setup_env.sh
src/Control/: Gating.hs  Mesher.hs
src/Control/UI/: Input.hs  Renderer.hs  Window.hs
src/Data/: Config.hs  Types.hs
src/FFI/RingBuffer/: IO.hs  Types.hs
src/Hardware/: Consumer.hs  Control.hs  Ingestion.hs  Parser.hs
src/Safety/: Audit.hs  Watchdog.hs
src/SignalProcessing/: Regression.hs
test/: ParserSpec.hs  RegressionSpec.hs  Spec.hs
test/FFI/RingBuffer/: IOSpec.hs  TypesSpec.hs
test/Hardware/: ConsumerSpec.hs
