cabal-version: 2.2

name:           sgrt-radar-system
version:        0.1.0.0
description:    Safety-critical Surface Guided Radiation Therapy (SGRT) system
author:         DevOps Architect
maintainer:     maintainer@example.com
copyright:      2024
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    cbits/include/*.h

common common-options
  default-extensions:
      OverloadedStrings
      StrictData
      NumericUnderscores
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , hmatrix
    , stm
    , clock
    , binary
    , bytestring
    , vector
    , serialport
    , OpenGL
    , GLUT
  default-language: Haskell2010

library
  exposed-modules:
      Control.Gating
      Control.Mesher
      Control.UI.Window
      Control.UI.Input
      Control.UI.Renderer
      Data.Config
      Data.Types
      Hardware.Ingestion
      Hardware.Control
      Hardware.Parser
      Safety.Audit
      Safety.Watchdog
      SignalProcessing.Regression
  other-modules:
      Paths_sgrt_radar_system
  hs-source-dirs:
      src
  include-dirs:
      cbits/include
  c-sources:
      cbits/src/ring_buffer.c
  cc-options: -Wall -O2
  import: common-options

executable sgrt-radar-system-exe
  main-is: Main.hs
  other-modules:
      Paths_sgrt_radar_system
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      sgrt-radar-system
  import: common-options

test-suite sgrt-radar-system-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_sgrt_radar_system
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      sgrt-radar-system
    , hspec
    , QuickCheck
    , hmatrix
  import: common-options

benchmark sgrt-radar-system-bench
  type: exitcode-stdio-1.0
  main-is: LatencyBench.hs
  other-modules:
      Paths_sgrt_radar_system
  hs-source-dirs:
      bench
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      sgrt-radar-system
    , criterion
  import: common-options
